--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="description" content="A QR code linking frontendmentor.io">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <div class="container">
+  <main class="container" role="QR code image">
     <div class="card">
       <img src="./images/image-qr-code.png" alt="qr code">
       <p id="title">
@@ -18,7 +19,7 @@
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
     </div>
-  </div>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="#">Andre Ornelio</a>.
