Changed role to agree with ARIA rules.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-  <main class="container" role="QR code image">
+  <main class="container" role="main">
     <div class="card">
       <img src="./images/image-qr-code.png" alt="qr code">
       <p id="title">
