--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       </p>
     </div>
   </main>
-  <div class="attribution">
+  <footer class="attribution" role="contentinfo">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="#">Andre Ornelio</a>.
-  </div>
+  </footer>
 </body>
 </html>
