--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </p>
     </div>
   </main>
-  <footer class="attribution" role="contentinfo">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="#">Andre Ornelio</a>.
   </footer>
