--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <main class="container">
     <div class="card">
       <img src="./images/image-qr-code.png" alt="qr code">
-      <p id="title">
+      <h1 id="title">
         Improve your front-end skills by building projects
-      </p>
+      </h1>
       <p id="description">
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
       </p>
