--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
       <img src="./images/image-qr-code.png" alt="qr code">
       <h1 id="title">
-        Improve your front-end skills by building projects
+        Improve your front-end <span>skills by building projects</span>
       </h1>
       <p id="description">
         Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
